// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GitExpertApp /> debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en <GitExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="mangos"
      key="mangos"
    />
    <GifGrid
      category="sandia"
      key="sandia"
    />
  </ol>
</Fragment>
`;
